--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm install && npx tsc && node dist/main.js"
+    "start": "npx tsc && node dist/main.js"
   },
   "keywords": [],
   "author": "",
